# aviateur

./: BUILD_ENVIRONMENT_NOTES.md  CMakeLists.txt  README.md  frames_to_mp4.py
.opencode/skills/aviateur-dev/: SKILL.md
src/: gui_interface.h  local_rtp_recorder.cpp  local_rtp_recorder.h  main.cpp
src/gui/: control_panel.cpp  control_panel.h  player_rect.cpp  player_rect.h
src/player/: video_player.h
src/player/ffmpeg/: ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_include.h  local_led_mp4_exporter.cpp  local_led_mp4_exporter.h  video_player.cpp  video_player.h
src/player/gst/: gst_decoder.cpp  video_player.cpp
src/wifi/: wfbng_link.cpp  wfbng_link.h
src/wifi/cross/: wfbng_processor.cpp
